complete: Passing Data with Event and Property Binding section 6 lecture 80

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a 
   href="#" 
-  (click)="onClick('recipeSelected')"
+  (click)="onSelected('recipeSelected')"
   class="list-group-item clearfix">
     <div class="pull-left">
       <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
